# devrel-demo-sources

./: .gitignore  README.md
.gemini/: styleguide.md
cloudskillboost_challenges/build-app-gemini-imagen/: README.md  challenges.py  pyproject.toml
demos/gemini-2-multimodal-chat-assistant-base/: Dockerfile  README.md  backend.py  frontend.py  pyproject.toml  requirements.txt  settings.py  settings.yaml.example
demos/gemini-2-multimodal-live/: README.md  main.py  pyproject.toml  settings.py
demos/multimodal-chat-assistant-base/: README.md  backend.py  frontend.py  main.py  pyproject.toml  settings.py  settings.yaml.example
demos/personal-expense-assistant/: .gitignore  README.md  agent_tools.py  backend.py  backend_new.py  frontend.py  main.py  pyproject.toml  schema.py  settings.py  settings.yaml.example  task_prompt.md  utils.py
demos/personal-expense-assistant-adk/: Dockerfile  README.md  backend.py  download_id_receipt_sample_images.py  frontend.py  pyproject.toml  schema.py  utils.py
demos/personal-expense-assistant-adk/expense_manager_agent/: agent.py  callbacks.py  task_prompt.md  tools.py
demos/personal-expense-assistant-adk/structure_formatting_agent/: agent.py
demos/personal-expense-assistant/expense_manager_agent/: agent.py  task_prompt.md  tools.py
demos/purchasing-concierge-a2a/: Dockerfile  README.md  main.py  purchasing_concierge_demo.py  pyproject.toml  settings.py  settings.yaml.example
demos/purchasing-concierge-a2a/a2a_client/: client.py
demos/purchasing-concierge-a2a/common/client/: client.py
demos/purchasing-concierge-a2a/common/server/: server.py
demos/purchasing-concierge-a2a/hosts/cli/: __main__.py  push_notification_listener.py  pyproject.toml
demos/purchasing-concierge-a2a/purchasing_agent/: host_agent.py
demos/purchasing-concierge-a2a/purchasing_concierge/: .env.example  agent.py  purchasing_agent.py  remote_agent_connection.py
demos/purchasing-concierge-a2a/remote_seller_agents/burger_agent/: .env.example  __main__.py  agent.py  pyproject.toml  task_manager.py
demos/purchasing-concierge-a2a/remote_seller_agents/pizza_agent/: .env.example  Dockerfile  __main__.py  agent.py  pyproject.toml  task_manager.py
experiments/genai_devrel_weekly_challenge/week1/: .gitignore  Dockerfile  README.md  graph.py  main.py  pyproject.toml  settings.py  settings.yaml.example
experiments/genai_devrel_weekly_challenge/week10/: .gitignore  README.md  main.py  pyproject.toml  settings.py  settings.yaml.example
experiments/genai_devrel_weekly_challenge/week2/: README.md  cloud-sql-proxy.sh  graph.py  logger.py  main.py  migrate.py  pyproject.toml  settings.py  settings.yaml.example
experiments/genai_devrel_weekly_challenge/week2/migrations/: 001_create_prompt_versions.sql  002_add_new_prompt.sql
experiments/genai_devrel_weekly_challenge/week3/: .gitignore  Dockerfile  README.md  convert_to_gemini_finetune_format.py  graph.py  main.py  migrate.py  pyproject.toml  sample_and_format_dataset.py  settings.py  settings.yaml.example  supervisord.conf
experiments/genai_devrel_weekly_challenge/week3/migrations/: 001_create_prompt_versions.sql  002_add_new_prompt.sql
experiments/genai_devrel_weekly_challenge/week4/: README.md  evaluation.ipynb  pyproject.toml
experiments/genai_devrel_weekly_challenge/week5/: .gitignore  README.md  cloud-sql-proxy.sh  graph.py  hotel_data.ndjson  index.py  pyproject.toml  settings.py  settings.yaml.example  test_search.py
experiments/genai_devrel_weekly_challenge/week6/: README.md  generate_test_case.py  graph.py  index.py  pyproject.toml  settings.py  settings.yaml.example  test_cases.json  test_graph.py  test_graph_result.md  test_search.py
experiments/genai_devrel_weekly_challenge/week7/: .gitignore  README.md  graph.py  logger.py  main.py  pyproject.toml  settings.py  settings.yaml.example  test_function_calling.py  utility.py
experiments/genai_devrel_weekly_challenge/week8/: README.md  graph.py  logger.py  pyproject.toml  read_teaming_result.md  red_teaming_test.ipynb  settings.py  settings.yaml.example
notebooks/: modified_intro_gemini_2_0_flash.ipynb
