[project]
name = "gemini-2-multimodal-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.1.0",
    "gradio>=5.15.0",
    "itsdangerous>=2.2.0",
    "librosa>=0.10.2.post1",
    "pyaudio>=0.2.14",
]

[tool.ruff]
target-version = "py312"
