[project]
name = "week7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.3.0",
    "gradio>=5.20.0",
    "langgraph>=0.3.2",
    "langgraph-checkpoint-postgres>=2.0.15",
    "psycopg-binary>=3.2.5",
    "pydantic-settings[yaml]>=2.8.1",
]
