[project]
name = "week8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=2.4.9",
    "google-genai>=1.3.0",
    "gradio>=5.20.0",
    "instructor>=1.7.2",
    "langgraph>=0.3.2",
    "litellm>=1.62.1",
    "pydantic-settings[yaml]>=2.8.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
