[project]
name = "pizza-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "purchasing-concierge-a2a",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "langgraph>=0.3.34",
    "pydantic>=2.10.6",
    "langchain-google-vertexai>=2.0.21",
]

[tool.uv.sources]
purchasing-concierge-a2a = { workspace = true }
